--- a/ServiceAuth/Clients/KotlinAndroid/app/build.gradle
+++ b/ServiceAuth/Clients/KotlinAndroid/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.github.kittinunf.fuel:fuel-android:1.12.1'
+    compile 'com.google.code.gson:gson:2.8.2'
 }
